# pass_hometasks

./: .gitignore
Hw7CatchSquareOOP/: Hw7CatchSquareOOP.slnx
Hw7CatchSquareOOP/Hw7CatchSquareOOP/: Form1.cs  Game.cs  Mathf.cs
advanced_python/: README.md  pipline.ipynb  requirement.txt  requirements.txt
advanced_python/app/: main.py  utils.py
advanced_python/face_comparator/: face_detector.py  utils.py
advanced_python/materials/: architect_schema.drawio
basic_img_preprocessing/: 11_surf.ipynb  6_texture_voronoi.ipynb  9_affine_transformations.ipynb  deep_of_picture.ipynb  img_type_convertation.ipynb  light_and_color_of_img.ipynb
business_modeling/: hw2_finall_presentation.docx  hw_project.docx  ~$_project.docx
classic_cv/: hw1.ipynb
cv_3d_models/: hw14_khristoforovaPA.ipynb  hw3_khristoforovaPA.ipynb  hw4_khristoforovaPA.ipynb  hw7_khristoforovaPA.ipynb  hw9_khristoforovaPA.ipynb  pyproject.toml
cv_nn/: lab1_dataloader.ipynb  lab2_basic_nn_and_onnx.ipynb  lab3_augmentation.ipynb  lab4_resnet_classification.ipynb  vit-fine-tuning-for-cifar10.ipynb
db_for_cv/: README.md  data_preprocess.ipynb  docker-compose.yml  metadata_cleaned.csv  metadata_cleaned.parquet
generative_models/: .gitignore  README.md  generative_modeling.ipynb
kion_hackathon/: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  requirements.txt  Христофорова_П_А_292405-2_отчет о технологической практике.docx
masters_thesis/: .gitignore  README.md  consts.py  predict.py  requirements.txt
ml/: hw1.ipynb
mlops/: README.md  hw_report.ipynb
(+127 files in other folders)
